# ros2_opcua

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  ament_uncrustify.cfg
.github/workflow/: rolling-test.yaml
.github/workflows/: ci-formator.yaml  rolling-prerelease.yaml  rolling-test.yaml
opcua_client_core/: CMakeLists.txt  package.xml
opcua_client_core/config/: datatypes.yaml
opcua_client_core/include/opcua_client_core/: custom_datatype.h  datatypes.hpp  device_container.hpp  opcua_client.hpp  opcua_client_manager.hpp  type_registry.hpp
opcua_client_core/include/opcua_client_core/node_interface/: node_opcua_client.hpp  node_opcua_client_interface.hpp
opcua_client_core/launch/: opcua.launch.py
opcua_client_core/src/: device_container.cpp  device_container_node.cpp  example_client_node.cpp  example_server_node.cpp  omros_client_node.cpp  opcua_client.cpp  opcua_client_manager.cpp
opcua_client_core/src/node_interface/: node_opcua_client.cpp
opcua_ros2_core/: CMakeLists.txt  CPPLINT.cfg  package.xml
opcua_ros2_core/include/opcua_ros2_core/: client.hpp  conversion.hpp  data_value.hpp  error.hpp  lifecycle_client_node.hpp  node_id.hpp  server.hpp  status_code.hpp  subscription.hpp  type_registry.hpp  types.hpp  variant.hpp  visibility_control.hpp
opcua_ros2_core/include/opcua_ros2_core/detail/: expected.hpp  ua_conversion.hpp
opcua_ros2_core/src/: client.cpp  conversion.cpp  lifecycle_client_node.cpp  node_id.cpp  server.cpp  subscription.cpp  type_registry.cpp  variant.cpp
opcua_ros2_core/test/: test_client_against_in_process_server.cpp  test_conversion.cpp  test_lifecycle_node.cpp
opcua_ros2_examples/: CMakeLists.txt  package.xml
opcua_ros2_fake_server/: CMakeLists.txt  package.xml
opcua_ros2_idl/: CMakeLists.txt  package.xml
opcua_ros2_interfaces/: CMakeLists.txt  CONVENTIONS.md  package.xml
opcua_ros2_interfaces/action/: Connect.action
opcua_ros2_interfaces/msg/: ApplicationDescription.msg  BrowseResult.msg  DataValue.msg  EndpointDescription.msg  LocalizedText.msg  NodeId.msg  QualifiedName.msg  ReferenceDescription.msg  StatusCode.msg  Variant.msg
opcua_ros2_interfaces/srv/: Browse.srv  Call.srv  HistoryRead.srv  Read.srv  TranslateBrowsePath.srv  Write.srv
opcua_ros2_interfaces/test/: test_nodeid_equality.py  test_variant_roundtrip.py
opcua_ros2_vendor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
opcua_ros2_vendor/cmake/: open62541pp_datatype_headers-extras.cmake
opcua_ros2_vendor/test/: smoke_test.cpp
opcua_test_client/: CMakeLists.txt  package.xml
opcua_tests/: CMakeLists.txt  package.xml
opcua_tests/config/: first.yaml  testoutiiiiii.yml
opcua_tests/include/: first.hpp
opcua_tests/include/opcua_tests/: custom_datatype.h  first.hpp
opcua_tests/src/: example_client_node.cpp  example_server_node.cpp
open62541pp_core_libraries/: CMakeLists.txt  package.xml
open62541pp_ros2/: CMakeLists.txt  package.xml
open62541pp_ros2/src/: example_node.cpp
open62541pp_vendor/: CMakeLists.txt  package.xml  setup.cfg
open62541pp_vendor/cmake/: open62541pp_datatype_headers-extras.cmake
open62541pp_vendor/dtgen/: dtgen.py
open62541pp_vendor/templates/: header_template.j2  template_datatyp.yaml
ros2_control_opcua/: CMakeLists.txt  package.xml
