<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opcua_ros2_core</name>
  <version>0.1.0</version>
  <description>Core C++ library: OPC UA client/server, variant conversion, subscriptions.</description>
  <maintainer email="prachandabhanu@gmail.com">Vishnuprasad Prachandabhanu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
