<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opcua_ros2_interfaces</name>
  <version>0.1.0</version>
  <description>
    ROS 2 message, service, and action definitions that mirror the OPC UA type
    system (NodeId, Variant, DataValue, StatusCode, …). Analogous to
    rcl_interfaces for parameters; these interfaces are the lingua franca
    between ROS 2 nodes and OPC UA.
  </description>
  <maintainer email="prachandabhanu@gmail.com">Vishnuprasad Prachandabhanu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
