<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opcua_ros2_vendor</name>
  <version>0.1.0</version>
  <description>
    Vendored build of open62541pp (C++ wrapper around open62541) for the ROS 2
    ecosystem, using ament_cmake_vendor_package with OpenSSL-backed encryption
    and exported CMake targets (open62541pp::open62541pp).
  </description>
  <maintainer email="prachandabhanu@gmail.com">Vishnuprasad Prachandabhanu</maintainer>
  <license>Apache-2.0</license>

  <author email="prachandabhanu@gmail.com">Vishnuprasad Prachandabhanu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <depend>ament_cmake_vendor_package</depend>
  <depend>libssl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
