<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open62541pp_vendor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vishnuprasad.prachandabhanu@ipa.fraunhofer.de">Vishnuprasad Prachandabhanu</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_vendor_package</build_depend>
  <build_depend>git</build_depend>
  <build_depend>python3-empy</build_depend>
  <build_depend>python3-jinja2</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
